Professor and Courses v1 (#154)
* Updated internal representation of professors. Long story short, they're stored in a relationwal with respect to sections
* Updated internal representation of gen ed codes. Now, we store the raw string from testudo, and transform it based on the version.
* Updated formatting of gen ed codes for v1. (Resolves #33 , Resolves #59 ). In short, we use an array of arrays. The outer array is an "OR", the inners are "AND". Cases like DSNL(If taken with XXXXYYY) are now represented as DSNL|XXXXYYYY
* Updated json dump importer to account for new format
* Create v1 versions of all course endpoints, update helpers some
* Added some docs
* Add v1 querying for courses (Resolved #127 )
