# openapi.yaml
@@ -34,14 +34,227 @@ tags:
     description: Data about things on campus, such as buildings, dining halls, and other facilities.
   - name: majors
     description: Data about the various majors offered on campus.
+  - name: professors
+    description: Data about professors and courses they teach
+  - name: courses
+    description: Course data from Testudo
 paths:
-  /v1/majors/list:
+  /courses:
+    get:
+      tags:
+        - courses
+      summary: List courses
+      description: Returns paginated list of courses
+      operationId: getCourses
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Course"
+  /courses/list:
+    get:
+      tags:
+        - courses
+      summary: List courses
+      description: Returns list of all minimized courses
+      operationId: getCourses
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Course"
+  /courses/sections:
+    get:
+      tags:
+        - courses
+      summary: List sections
+      description: Returns paginated list of sections
+      operationId: getSections
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Section"
+  /courses/sections/{section_ids}:
+    get:
+      tags:
+        - courses
+      summary: List sections
+      description: Returns paginated list of sections
+      operationId: getSections
+      parameters:
+        - in: path
+          name: section_ids
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
+          description: One or more comma separated section ids
+          explode: true
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Section"
+  /courses/{course_ids}:
+    get:
+      tags:
+        - courses
+      summary: View course
+      description: Returns info about one or more courses
+      operationId: getCoursesById
+      parameters:
+        - in: path
+          name: course_ids
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
+          description: One or more comma separated course ids
+          explode: true
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Course"
+  /courses/{course_ids}/sections:
+    get:
+      tags:
+        - courses
+      summary: View course
+      description: Returns info about one or more courses
+      operationId: getCourseSectionsById
+      parameters:
+        - in: path
+          name: course_ids
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
+          description: One or more comma separated course ids
+          explode: true
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Section"
+  /courses/{course_ids}/sections/{section_ids}:
+    get:
+      tags:
+        - courses
+      summary: View course
+      description: Returns info about one or more courses
+      operationId: getCourseSectionsById
+      parameters:
+        - in: path
+          name: course_ids
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
+          description: One or more comma separated course ids
+          explode: true
+        - in: path
+          name: section_ids
+          required: true
+          schema:
+            type: array
+            items:
+              type: string
+          description: One or more comma separated section ids
+          explode: true
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Section"
+  /courses/semesters:
+    get:
+      tags:
+        - courses
+      summary: List semesters
+      description: Returns list of all available semesters
+      operationId: getSemesters
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+  /courses/departments:
+    get:
+      tags:
+        - courses
+      summary: List departments
+      description: Returns list of all available departments
+      operationId: getDepartments
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+  /professors:
+    get:
+      tags:
+        - professors
+      summary: List professors
+      description: Returns list of all professors
+      operationId: getProfessors
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Professor"
+  /majors/list:
     get:
       tags:
         - majors
       summary: List majors
       description: Get a list of all majors
-      operationId: findMajors
+      operationId: getMajors
       responses:
         "200":
           description: Successful Operation
@@ -51,13 +264,13 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Major"
-  /v1/map/buildings:
+  /map/buildings:
     get:
       tags:
         - map
       summary: List buildings
       description: Get a list of the available buildings.
-      operationId: findBuildings
+      operationId: getBuildings
       responses:
         "200":
           description: Successful Operation
@@ -67,7 +280,7 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Building"
-  /v1/map/buildings/{building_id}:
+  /map/buildings/{building_id}:
     get:
       tags:
         - map
@@ -75,7 +288,7 @@ paths:
       description: >-
         Get location data about one or more buildings. Comma separated building
         numbers are the parameters.
-      operationId: findBuildingById
+      operationId: getBuildingById
       parameters:
         - in: path
           name: building_id
@@ -118,6 +331,127 @@ paths:
 
 components:
   schemas:
+    Course:
+      type: object
+      description: Represents a course on Testudo
+      properties:
+        course_id:
+          type: string
+        semester:
+          type: string
+        name:
+          type: string
+        dept_id:
+          type: string
+        department:
+          type: string
+        credits:
+          type: string
+        description:
+          type: string
+        grading_method:
+          type: array
+          items:
+            type: string
+        gen_ed:
+          type: array
+          items:
+            type: array
+            items:
+              type: string
+        core:
+          type: array
+          items:
+            type: string
+        relationships:
+          type: object
+          properties:
+            coreqs:
+              type: string
+              nullable: true
+            prereqs:
+              type: string
+              nullable: true
+            formerly:
+              type: string
+              nullable: true
+            restrictions:
+              type: string
+              nullable: true
+            additional_info:
+              type: string
+              nullable: true
+            also_offered_as:
+              type: string
+              nullable: true
+            credit_granted_for:
+              type: string
+              nullable: true
+        sections:
+          type: array
+          items:
+            oneOf:
+              - type: string
+              - $ref: "#/components/schemas/Section"
+    Section:
+      type: object
+      properties:
+        course:
+          type: string
+        section_id:
+          type: string
+        semester:
+          type: string
+        number:
+          type: string
+        seats:
+          type: string
+        meetings:
+          type: array
+          items:
+            $ref: "#/components/schemas/Meeting"
+        open_seats:
+          type: string
+        waitlist:
+          type: string
+        instructors:
+          type: array
+          items:
+            type: string
+    Meeting:
+      type: object
+      properties:
+        days:
+          type: string
+        room:
+          type: string
+        building:
+          type: string
+        classtype:
+          type: string
+        start_time:
+          type: string
+        end_time:
+          type: string
+    Professor:
+      type: object
+      description: Represents a professor
+      properties:
+        name:
+          type: string
+          description: Professor's name on Testudo
+          example: ""
+        taught:
+          type: array
+          items:
+            type: object
+            properties:
+              semester:
+                type: integer
+                example: 202001
+              course:
+                type: string
+                example: ""
     Major:
       type: object
       description: Represents a major
